# fui-rs

./: .dockerignore  .gitignore  CLA.md  COMMERCIAL.md  CONTRIBUTING.md  LICENSE.md  QUICKSTART.md  README.md  eslint.config.ts  package.json
v2/fui-rs/: COMMERCIAL.md  Cargo.toml  LICENSE.md  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
v2/fui-rs/browser/: harness.ts  index.html
v2/fui-rs/crates/: Cargo.toml
v2/fui-rs/demo/: harness.ts  index.html  route-shell.html  routes.json  worker-host-services.ts
v2/fui-rs/native-demo/: Cargo.toml
v2/fui-rs/scripts/: build.sh  check-runtime-dependency.sh  framework-host-services.ts  generate-host-events.ts  generate-host-services.ts
v2/fui-rs/src/: animation.rs  app.rs  assets.rs  bitmap.rs  bridge_callbacks.rs  color.rs  component.rs  context_menu_manager.rs  debug.rs  drag_drop.rs  drag_gesture.rs  drawing.rs  event.rs  external_drop.rs  fetch.rs  ffi.rs  file.rs  focus_adorner.rs  focus_visibility.rs  frame_scheduler.rs  frame_signal.rs  host_events.rs  host_services.rs  image_sampling.rs  keyboard_scroll.rs  keyboard_scroll_tracker.rs  lib.rs  logger.rs  mobile_text_selection_toolbar.rs  navigation.rs  node.rs  panic_hook.rs  persisted.rs  platform.rs  popup_presenter.rs  selection_handle_adorner.rs  signal.rs  smoke.rs  state.rs  text.rs  (+11 more)
v2/fui-rs/tests/: Smoke.spec.ts  bridge_callbacks_tests.rs  drawing_lifetime_tests.rs  event_integration_tests.rs  framework_host_services_tests.rs  public_api_parity_tests.rs  scroll_and_selection_tests.rs  signal_tests.rs  smoke_test.rs  (+2 more)
(+293 files in other folders)
