[package]
name = "fui-rs-demo-worker"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only OR LicenseRef-EffinDom-Commercial"

[dependencies]
fui = { package = "fui-rs", path = "../..", default-features = false, features = ["worker-runtime"] }

[features]
native-runtime = []

[lib]
name = "fui_rs_demo_worker"
crate-type = ["cdylib"]
